--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Sansita', sans-serif;
+  font-family: "Sansita", sans-serif;
   background-color: #fff8f0;
   color: #5a4a42;
   display: flex;
@@ -12,7 +12,7 @@ input,
 select {
   font-family: inherit;
   font-size: inherit;
-  padding:0.5rem;
+  padding: 0.5rem;
 }
 
 .container {
@@ -25,7 +25,7 @@ select {
 input,
 select,
 button {
-  font-family: 'Sansita', sans-serif;
+  font-family: "Sansita", sans-serif;
 }
 button {
   padding: 0.5rem 1rem;
@@ -50,6 +50,13 @@ button {
 .form-container {
   flex: 1;
   padding: 20px;
+}
+.form-group {
+  margin: 1rem 0;
+}
+
+.order-summary {
+  display: none;
 }
 
 .price-banner {
@@ -335,6 +342,5 @@ button {
   left: -0.5em;
   background: inherit;
   background: white;
-  content: '';
+  content: "";
 }
-
